--- a/views/views.xml
+++ b/views/views.xml
@@ -51,7 +51,7 @@
 
             <xpath expr="//field[@name='company_currency_id']" position="after">
                 <field name="flota_id"/>
-                <field name="tipo_servicio_id" attrs="{'invisible': [('flota_id', '=', '')]}"/>
+                <field name="tipo_servicio_id" attrs="{'invisible': [('flota_id', '=', False)], 'required': [('flota_id', '!=', False)]}"/>
             </xpath>
 
         </field>
